enhance adapter task with task wrappers

--- a/extension/extension-notify-email/src/main/resources/templates/alarm.html
+++ b/extension/extension-notify-email/src/main/resources/templates/alarm.html
@@ -343,6 +343,9 @@
                                                         <strong>报警时间：</strong><span th:text="${alarmTime}"></span></p>
                                                     <p
                                                             style="font-family:Arial;font-size:14px;margin-top:0px;margin-bottom:0px;font-weight:normal;color:#000000;">
+                                                        <strong>trace 信息：</strong><span th:text="${trace}"></span></p>
+                                                    <p
+                                                            style="font-family:Arial;font-size:14px;margin-top:0px;margin-bottom:0px;font-weight:normal;color:#000000;">
                                                         <strong>报警间隔：</strong><span th:text="${alarmInterval}"></span> s</p>
                                                 </div>
                                             </td>
