optimize thrid party threadpool proxy

--- a/extension/extension-notify-email/src/main/resources/templates/alarm.html
+++ b/extension/extension-notify-email/src/main/resources/templates/alarm.html
@@ -244,13 +244,13 @@
                                                         <span th:if="${#sets.contains(highlightVariables, 'alarmType')}" style="color: #ff0013">
                                                             🔴
                                                         </span>
-                                                        <strong>报警类型：</strong><span th:text="${alarmType}"></span></p>
+                                                        <strong>报警项：</strong><span th:text="${alarmType}"></span></p>
                                                     <p
                                                             style="font-family:Arial;font-size:14px;margin-top:0px;margin-bottom:0px;font-weight:normal;color:#000000;">
                                                         <span th:if="${#sets.contains(highlightVariables, 'alarmValue')}" style="color: #ff0013">
                                                             🔴
                                                         </span>
-                                                        <strong>阈值 / 当前值：</strong><span th:text="${alarmValue}"></span></p>
+                                                        <strong>报警阈值 / 当前值：</strong><span th:text="${alarmValue}"></span></p>
                                                     <p
                                                             style="font-family:Arial;font-size:14px;margin-top:0px;margin-bottom:0px;font-weight:normal;color:#000000;">
                                                         <span th:if="${#sets.contains(highlightVariables, 'corePoolSize')}" style="color: #ff0013">
