[ISSUE #364]Add the system load and cpu usage to alarm message.

--- a/extension/extension-notify-email/src/main/resources/templates/alarm.html
+++ b/extension/extension-notify-email/src/main/resources/templates/alarm.html
@@ -347,6 +347,9 @@
                                                     <p
                                                             style="font-family:Arial;font-size:14px;margin-top:0px;margin-bottom:0px;font-weight:normal;color:#000000;">
                                                         <strong>报警间隔：</strong><span th:text="${alarmInterval}"></span> s</p>
+                                                    <p
+                                                            style="font-family:Arial;font-size:14px;margin-top:0px;margin-bottom:0px;font-weight:normal;color:#000000;">
+                                                        <strong>扩展信息：</strong><span th:text="${ext}"></span></p>
                                                 </div>
                                             </td>
                                         </tr>
