add jmh benchmark reports

--- a/extension/extension-notify-email/src/main/resources/templates/alarm.html
+++ b/extension/extension-notify-email/src/main/resources/templates/alarm.html
@@ -280,7 +280,7 @@
                                                         <strong>历史最大线程数：</strong><span th:text="${largestPoolSize}"></span></p>
                                                     <p
                                                             style="font-family:Arial;font-size:14px;margin-top:0px;margin-bottom:0px;font-weight:normal;color:#000000;">
-                                                        <strong>任务总数：</strong><span th:text="${max}"></span></p>
+                                                        <strong>任务总数：</strong><span th:text="${taskCount}"></span></p>
                                                     <p
                                                             style="font-family:Arial;font-size:14px;margin-top:0px;margin-bottom:0px;font-weight:normal;color:#000000;">
                                                         <strong>执行完成任务数：</strong><span th:text="${completedTaskCount}"></span></p>
