refactor alarm related [issues #442]

--- a/extension/extension-notify-email/src/main/resources/templates/alarm.html
+++ b/extension/extension-notify-email/src/main/resources/templates/alarm.html
@@ -343,10 +343,13 @@
                                                         <strong>报警时间：</strong><span th:text="${alarmTime}"></span></p>
                                                     <p
                                                             style="font-family:Arial;font-size:14px;margin-top:0px;margin-bottom:0px;font-weight:normal;color:#000000;">
-                                                        <strong>trace 信息：</strong><span th:text="${trace}"></span></p>
+                                                        <strong>统计周期：</strong><span th:text="${alarmPeriod}"></span> s</p>
                                                     <p
                                                             style="font-family:Arial;font-size:14px;margin-top:0px;margin-bottom:0px;font-weight:normal;color:#000000;">
-                                                        <strong>报警间隔：</strong><span th:text="${alarmInterval}"></span> s</p>
+                                                        <strong>静默时长：</strong><span th:text="${alarmSilencePeriod}"></span> s</p>
+                                                    <p
+                                                            style="font-family:Arial;font-size:14px;margin-top:0px;margin-bottom:0px;font-weight:normal;color:#000000;">
+                                                        <strong>trace 信息：</strong><span th:text="${trace}"></span></p>
                                                     <p
                                                             style="font-family:Arial;font-size:14px;margin-top:0px;margin-bottom:0px;font-weight:normal;color:#000000;">
                                                         <strong>扩展信息：</strong><span th:text="${ext}"></span></p>
